--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,9 +29,11 @@
         android:drawableStart="@drawable/ic_person"
         android:drawablePadding="12dp"
         android:ems="10"
-        android:hint="Username"
+        android:hint="@string/username"
         android:inputType="textEmailAddress"
-        android:paddingStart="5dp" />
+        android:paddingStart="5dp"
+        tools:ignore="RtlSymmetry"
+        android:autofillHints="" />
 
 
     <EditText
@@ -47,7 +49,9 @@
         android:ems="10"
         android:hint="@string/email_address"
         android:inputType="textEmailAddress"
-        android:paddingStart="5dp" />
+        android:paddingStart="5dp"
+        android:autofillHints=""
+        tools:ignore="RtlSymmetry" />
 
     <EditText
         android:id="@+id/edit_txt_password"
@@ -63,7 +67,9 @@
         android:hint="@string/password"
         android:inputType="textPassword"
         android:paddingStart="5dp"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="20dp"
+        android:autofillHints=""
+        tools:ignore="RtlSymmetry" />
 
     <TextView
         android:id="@+id/txt_login_click"
