--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,8 +14,8 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.Tripaway.NoActionBar">
-        <item name="windowActionBar">false</item>
+    <style name="Theme.Tripaway.ActionBar">
+        <item name="windowActionBar">true</item>
         <item name="windowNoTitle">true</item>
     </style>
 
