--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,13 +12,17 @@
             android:id="@+id/nav_history"
             android:icon="@drawable/history"
             android:title="@string/menu_history" />
-        <item
-            android:id="@+id/nav_sync"
-            android:icon="@drawable/sync"
-            android:title="@string/menu_sync" />
+<!--        <item-->
+<!--            android:id="@+id/nav_sync"-->
+<!--            android:icon="@drawable/sync"-->
+<!--            android:title="@string/menu_sync" />-->
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/logout"
             android:title="@string/menu_logout" />
+        <item
+            android:id="@+id/nav_sync"
+            android:icon="@drawable/sync"
+            android:title="@string/menu_sync" />
     </group>
 </menu>
