--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="purple_900">#4A148C</color>
     <color name="gray_500">#9E9E9E</color>
     <color name="dark_blue">#0B1950</color>
+    <color name="new_blue">#3747A0</color>
 </resources>
