--- a/app/src/main/res/layout/card_layout_history.xml
+++ b/app/src/main/res/layout/card_layout_history.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
     <!--    <menu-->
