--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,21 +8,24 @@
 
     <ImageView
         android:id="@+id/app_logo"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        app:srcCompat="@drawable/my_logo"
-        android:layout_centerInParent="true"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
         android:layout_marginTop="150dp"
-        android:contentDescription="@string/todo" />
+        android:contentDescription="@string/todo"
+        app:srcCompat="@drawable/travel_image2" />
 
     <TextView
         android:id="@+id/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tripawy"
         android:layout_below="@id/app_logo"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:text="@string/tripawy"
+        android:textColor="#010000"
+        android:textSize="18sp"
+        android:visibility="invisible" />
     <Button
         android:id="@+id/btn_sign_up"
         android:layout_width="wrap_content"
@@ -48,5 +51,6 @@
         android:id="@+id/btnHomeScreenActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/btnHomeScreenActivity" />
+        android:text="@string/btnHomeScreenActivity"
+        android:visibility="invisible" />
 </RelativeLayout>
