--- a/app/src/main/res/layout/activity_new_trip.xml
+++ b/app/src/main/res/layout/activity_new_trip.xml
@@ -77,7 +77,7 @@
         android:layout_width="113dp"
         android:layout_height="41dp"
         android:text="@string/btnCurrentLocation"
-        app:backgroundTint="@color/new_blue"
+        app:backgroundTint="@color/dark_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtTitleNew" />
 
@@ -131,7 +131,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/new_blue"
+        android:backgroundTint="@color/dark_blue"
         android:text="@string/btnAddTrip"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
