--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,12 +10,11 @@
         android:id="@+id/txt_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sign_up"
-        android:layout_centerInParent="true"
         android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
         android:layout_marginTop="50dp"
-        android:textColor="@color/purple_900"
-        android:layout_marginBottom="50dp"/>
+        android:layout_marginBottom="50dp"
+        android:textColor="@color/purple_900" />
 
 
     <EditText
