--- a/app/src/main/res/layout/app_bar_home_screen.xml
+++ b/app/src/main/res/layout/app_bar_home_screen.xml
@@ -25,7 +25,7 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
 
-        android:layout_width="48dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
@@ -33,7 +33,10 @@
         android:contentDescription="@string/btnNewTrip"
         android:minHeight="48dp"
 
+
         app:srcCompat="@android:drawable/ic_input_add"
         tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
+
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
