menu & logout fragment

--- a/app/src/main/res/layout/card_layout_history.xml
+++ b/app/src/main/res/layout/card_layout_history.xml
@@ -40,7 +40,7 @@
     <!--    </menu>-->
 
     <Button
-        android:id="@+id/btnViewOptions"
+        android:id="@+id/btnOptions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
