--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -39,18 +39,18 @@
 
     <!--    </menu>-->
 
-    <Button
-        android:id="@+id/btnViewOptions"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <TextView
+        android:id="@+id/btnViewOption"
+        android:layout_width="40dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="@color/white"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:text="&#8942;"
         android:textAppearance="?android:textAppearanceLarge"
         android:textColor="#131313"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.982"
-        app:layout_constraintStart_toEndOf="@+id/textViewTime"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
