--- a/app/src/main/res/layout/history_card_view.xml
+++ b/app/src/main/res/layout/history_card_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -31,12 +32,19 @@
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtViewDate" />
+
         <ImageView
+            android:id="@+id/imgHistory"
             android:layout_width="match_parent"
             android:layout_height="88dp"
             android:scaleType="fitXY"
+            android:scrollbarThumbHorizontal="@drawable/historyfrag"
+            android:scrollbarThumbVertical="@drawable/historyfrag"
+            android:scrollbarTrackHorizontal="@drawable/historyfrag"
             android:src="@drawable/select"
-            app:tint="#555555" />
+            android:visibility="visible"
+            app:srcCompat="@drawable/historyfrag"
+            tools:visibility="visible" />
 
         <LinearLayout
             android:id="@+id/lytVisible"
@@ -112,7 +120,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/btnShowNotes"
-                android:text="@string/btnShowNotes" />
+                android:text="@string/btnNotes" />
 
         </LinearLayout>
 
