--- a/app/src/main/res/layout/history_card_view.xml
+++ b/app/src/main/res/layout/history_card_view.xml
@@ -36,114 +36,107 @@
             app:layout_constraintTop_toBottomOf="@+id/txtViewDate" />
 
         <ImageView
+            android:id="@+id/imgHistory"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/travel_image" />
 
-        <LinearLayout
-            android:id="@+id/lytVisible"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="16dp">
-
-            <Button
-                android:id="@+id/btnDeleteTrip"
-                android:layout_width="325dp"
-                android:layout_height="48dp"
-                android:contentDescription="@string/deleteTrip"
-                android:text="@string/Delete"
-                app:backgroundTint="@color/dark_blue"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtEndPoint" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/lytHidden"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp"
-            android:visibility="gone">
-
-            <TextView
-                android:id="@+id/txtViewDate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="4dp"
-                android:text="@string/txtViewDate"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/textViewTime"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="4dp"
-                android:text="@string/textViewTime"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/txtViewDate"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/txtStartPoint"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="4dp"
-                android:text="@string/txtStartPoint"
-                app:layout_constraintStart_toEndOf="@+id/imgArrow"
-                app:layout_constraintTop_toBottomOf="@+id/txtTripName" />
-
-            <TextView
-                android:id="@+id/txtEndPoint"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="4dp"
-                android:text="@string/txtEndPoint"
-                app:layout_constraintStart_toEndOf="@+id/imgArrow"
-                app:layout_constraintTop_toBottomOf="@+id/txtStartPoint" />
-
             <LinearLayout
+                android:id="@+id/lytHidden"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp"
+                android:visibility="gone">
 
                 <TextView
-                    android:id="@+id/txtDuration"
-                    android:layout_width="0dp"
+                    android:id="@+id/txtViewDate"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="4dp"
-                    android:layout_weight="1"
+                    android:text="@string/txtViewDate"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/textViewTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="4dp"
+                    android:text="@string/textViewTime"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/txtViewDate"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/txtStartPoint"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="4dp"
+                    android:text="@string/txtStartPoint"
+                    app:layout_constraintStart_toEndOf="@+id/imgArrow"
+                    app:layout_constraintTop_toBottomOf="@+id/txtTripName" />
+
+                <TextView
+                    android:id="@+id/txtEndPoint"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="4dp"
+                    android:text="@string/txtEndPoint"
+                    app:layout_constraintStart_toEndOf="@+id/imgArrow"
+                    app:layout_constraintTop_toBottomOf="@+id/txtStartPoint" />
+
+
+                <TextView
+                    android:id="@+id/txtDuration"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="4dp"
                     android:text="duration"
                     android:textColor="#028579"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/txtDistance"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="distance" />
+                    android:text="distance"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="4dp"
+                    android:textColor="#028579"
+                    android:textStyle="bold" />
+
+
+                <Button
+                    android:id="@+id/btnNotes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#EFA73C"
+                    android:contentDescription="@string/btnShowNotes"
+                    android:text="@string/btnShowNotes"
+                    android:textColor="@color/white" />
+
             </LinearLayout>
 
-            <Button
-                android:id="@+id/btnNotes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/btnShowNotes"
-                android:text="@string/btnShowNotes" />
+            <!--end hidden content-->
 
-        </LinearLayout>
 
-        <!--end hidden content-->
+        <Button
+            android:id="@+id/btnDeleteTrip"
+            android:layout_width="325dp"
+            android:layout_height="48dp"
+            android:contentDescription="@string/deleteTrip"
+            android:text="@string/Delete"
+            app:backgroundTint="@color/dark_blue"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtEndPoint" />
+
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
