--- a/app/src/main/res/layout/floating_widget_layout.xml
+++ b/app/src/main/res/layout/floating_widget_layout.xml
@@ -25,7 +25,7 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_marginTop="8dp"
-                android:src="@mipmap/ic_launcher_round"
+                android:src="@drawable/travel_image2"
                 tools:ignore="ContentDescription" />
 
             <!--   Close button to close Floating Widget View  -->
